--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
 <div id="wrap">
   <header>
-    <div class="title">🐘 Elephant Rescue — Ice Cream Reward</div>
+    <div class="title">🐘 Elephant Rescue</div>
     <div class="hud">
       <div id="hp" class="pill">❤️ 100</div>
       <div id="timer" class="pill">⏱️ 00:00</div>
@@ -81,7 +81,7 @@
     <div id="start" class="modal" style="display:flex">
       <div class="card">
         <h2>Mission: Save the Baby Elephant</h2>
-        <p>You are the rescuer (<strong>IMT_8659</strong>). Reach the trapped baby elephant, press <b>E</b> (or tap ▶) to rescue it, then head to <strong>smw1</strong> to receive a celebratory ice cream. Avoid hazards!</p>
+        <p>You are the rescuer (<strong>Israt</strong>). Reach the trapped baby elephant, press <b>E</b> (or tap ▶) to rescue it, then head to <strong>Shihan</strong> to receive a celebratory ice cream. Avoid hazards!</p>
         <div class="row">
           <div class="chip">Move: WASD / Arrow Keys</div>
           <div class="chip">Action: E</div>
@@ -105,7 +105,7 @@
     <div id="win" class="modal">
       <div class="card">
         <h2>Victory! Ice Cream Unlocked 🍦</h2>
-        <p>You rescued the elephant and met <strong>smw1</strong>. Enjoy your Ferrero Rocher ice cream!</p>
+        <p>You rescued the elephant and met <strong>Shihan</strong>. Enjoy your Ferrero Rocher ice cream!</p>
         <div class="actions"><button class="primary" onclick="Game.reset()">Play Again</button></div>
         <div style="display:flex;gap:14px;align-items:center;margin-top:10px">
           <img src="icecream.jpg" alt="ice cream" style="height:96px;width:auto;border-radius:12px;border:1px solid rgba(255,255,255,.15)"/>
@@ -119,7 +119,7 @@
   </div>
 
   <footer>
-    Drop these images in the same folder as this HTML (exact names): <code>IMG_8659.JPG</code> (rescuer), <code>smw1.jpg</code> (ice‑cream giver), <code>elephant.jpg</code> (baby elephant), and <code>icecream.jpg</code> (reward image). Works on desktop & mobile.
+    Works on desktop & mobile.
   </footer>
 </div>
 
