--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Elephant Rescue — Ice Cream Reward</title>
+  <title>Elephant Rescue</title>
   <style>
     :root {
       --bg:#0b1020; --panel:#12182b; --ink:#e9eefc; --accent:#6ee7ff; --accent2:#a7f3d0; --danger:#ff6b6b; --ok:#22c55e;
@@ -81,7 +81,7 @@
     <div id="start" class="modal" style="display:flex">
       <div class="card">
         <h2>Mission: Save the Baby Elephant</h2>
-        <p>You are the rescuer (<strong>Israt</strong>). Reach the trapped baby elephant, press <b>E</b> (or tap ▶) to rescue it, then head to <strong>Shihan</strong> to receive a celebratory ice cream. Avoid hazards!</p>
+        <p>You are the rescuer <strong>Israt</strong>. Reach the trapped baby elephant, press <b>E</b> (or tap ▶) to rescue it, then head to <strong>Shihan</strong> to receive a celebratory ice cream. Avoid hazards!</p>
         <div class="row">
           <div class="chip">Move: WASD / Arrow Keys</div>
           <div class="chip">Action: E</div>
@@ -119,7 +119,7 @@
   </div>
 
   <footer>
-    Works on desktop & mobile.
+    Works on desktop & mobile. All rights reserved to Israt.
   </footer>
 </div>
 
