--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div id="start" class="modal" style="display:flex">
       <div class="card">
         <h2>Mission: Save the Baby Elephant</h2>
-        <p>You are the rescuer <strong>Israt</strong>. Reach the trapped baby elephant, press <b>E</b> (or tap ▶) to rescue it, then head to <strong>Shihan</strong> to receive a celebratory ice cream. Avoid hazards!</p>
+        <p>You are the rescuer <strong>Israt</strong>. Reach the trapped baby elephant, press <b>E</b> (or tap ▶) to rescue it, then head to <strong>Shihan</strong> to receive a celebratory surprise. Avoid hazards!</p>
         <div class="row">
           <div class="chip">Move: WASD / Arrow Keys</div>
           <div class="chip">Action: E</div>
